[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "baysiebins"
version = "0.1.0"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "(unofficial) iCAL feed for Bayswater bins"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
Flask = "^2.1.1"
icalendar = "^4.0.7"
requests = "^2.27.1"
pytz = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "^3.7.9"
pytest = "^5.4.1"

