[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "baysiebins"
version = "0.1.0"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "(unofficial) iCAL feed for Bayswater bins"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
Flask = "^3.0.3"
icalendar = "^5.0.12"
requests = "2.31.0"
pytz = "^2024.1"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.2"

